--- a/style.css
+++ b/style.css
@@ -8,13 +8,14 @@ body{
 }
 .navbar{
     display: flex;
-    padding-left: 55%;
+    padding-left: 52%;
     width: 100%;
     position:fixed ;
 }
 .ch{
     display: flex;
     padding-left: 8%;
+    padding-bottom: 2%;
     position:fixed ;
     color: black;
 }
@@ -24,4 +25,11 @@ body{
     display: inline-block;
     padding: 10px 25px;
     float: right;
+}
+.topic{
+    width: 55%;
+    float: left;
+    padding-top: 50px;
+    padding-left: 13%;
+    font-size: 40px;
 }
