--- a/style.css
+++ b/style.css
@@ -8,28 +8,42 @@ body{
 }
 .navbar{
     display: flex;
-    padding-left: 52%;
+    padding-left: 55%;
     width: 100%;
     position:fixed ;
 }
 .ch{
     display: flex;
-    padding-left: 8%;
+    padding-left: 6%;
     padding-bottom: 2%;
     position:fixed ;
     color: black;
+    font-size: 27px;
 }
 .navbar a{
     color: black;
     list-style-type: none;
     display: inline-block;
     padding: 10px 25px;
-    float: right;
+    font-size: 20px;
 }
 .topic{
-    width: 55%;
-    float: left;
+    width: 65%;
     padding-top: 50px;
-    padding-left: 13%;
-    font-size: 40px;
+    padding-left: 9%;
+    font-size: 50px;
+} 
+.main{
+    display: flex;
+    padding-left: 120px;
+    width: 100%;
+}
+.alien{
+padding-right: 20px;
+}
+.man{
+padding-right: 20px;
+}
+girl{
+padding-right: 20px;
 }
