--- a/style.css
+++ b/style.css
@@ -33,14 +33,15 @@ nav ul li {
     padding: 10px 25px;
 
 }
-nav ul li a{
+
+nav ul li a {
     text-decoration: none;
-    color: black;
+    color          : black;
 }
 
 nav ul li a:hover {
-    color     : #f9004d;
-    transition: .4s;
+    color          : #f9004d;
+    transition     : .4s;
     text-decoration: underline;
 }
 
@@ -68,6 +69,28 @@ nav ul li a:hover {
 .girl {
     padding-right: 20px;
 } */
+.m-font-size {
+    font-size: 24px;
+}
+
+.features-wrapper {
+    display       : flex;
+    flex-direction: row;
+    margin-left   : 120px;
+}
+
+.feature-image-wrapper {
+    width: 450px;
+}
+
+.feature-image {
+    width        : 100%;
+    padding-right: 50px;
+}
+
+.paragraph-text {
+    font-family: "Inter";
+}
 
 .foodimage-text {
     display    : flex;
@@ -96,26 +119,18 @@ nav ul li a:hover {
     justify-content: left;
     padding-left   : 210px;
 }
-.paragraph-text{
-    font-size: 16px;
+
+.paragraph-text {
+    font-size  : 16px;
     font-family: "Inter";
     font-weight: 400;
 }
-.m-font-size{
-    font-size: 24px;
-}
-.features-wrapper{
+.highlight-bottom2{
     display: flex;
-    flex-direction: row;
     margin-left: 120px;
-    }
-.feature-image-wrapper{
-    width: 450px;
+    margin-top: 60px;
 }
-.feature-image{
-    width: 100%;
-    padding-right: 50px;
-}
-.paragraph-text{
-    font-family: "Inter";
+.highlight-bottom2 p{
+    justify-content: left;
+    padding-left: 295px;
 }
